# UI-AI-AGENT

./: .gitignore  BACKEND_CI_FIXES.md  ENVIRONMENT_SETUP_SUMMARY.md  README.md  SECRETS_SETUP.md  SETUP.md  docker-compose.yml  start.sh  stop.sh
.github/: CODEOWNERS  README.md  branch-protection.yml  pull_request_template.md
.github/workflows/: branch-cleanup.yml  ci.yml  deploy-dev.yml  deploy-prod.yml  pr-checks.yml  scheduled-cleanup.yml
backend/: .dockerignore  .flake8  CORS_TROUBLESHOOTING.md  Dockerfile  PRODUCTION_MIGRATIONS.md  README.md  RENDER_DEPLOYMENT.md  alembic.ini  init.sql  main.py  pyproject.toml  pytest.ini  render.yaml  requirements.txt  reset-database.sh  start-backend.sh  start-database.sh  stop-database.sh  test_cors.py  test_cors_deployment.py  test_db_connection.py  test_production_cors.py
backend/alembic/: env.py
backend/alembic/versions/: 5af1a8d820b2_add_username_field_to_user_table.py  7c3c4aef5a5f_rename_family_name_to_first_name.py  8cd92ba41378_replace_username_with_family_last_name_v2.py  98c79d1523ef_initial_migration_create_users_table.py
backend/scripts/: README.md  build.sh  migrate-db.sh  production-migrate.sh  start-backend.sh  start-database.sh  stop-database.sh
backend/src/: __init__.py
backend/src/api/graphql/: dashboard.py  router.py  schema.py
backend/src/api/v1/: user_controller.py
backend/src/core/config/: database.py  development.py  production.py
backend/src/models/entities/: job.py  user.py
backend/src/models/requests/: __init__.py  user_requests.py
backend/src/models/responses/: __init__.py  user_responses.py
backend/src/routes/: user_routes.py
backend/src/services/: user_service.py
backend/tests/: test_main.py  test_simple.py
frontend/: ENVIRONMENT_SETUP.md  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/test-config/: page.tsx
frontend/components/: EnvironmentStatus.tsx
frontend/components/HomeTest/: HomeTest.tsx
frontend/scripts/: README.md  setup-env.sh  switch-env.sh
frontend/src/config/: environment.ts  index.ts
frontend/src/lib/: api.ts  index.ts
scripts/: README.md  start-backend.sh  start-frontend.sh  start.sh  stop-all.sh  stop.sh
