
[tool.poetry]
name = "backend"
version = "0.1.0"
description = "UI AI Agent Backend API with FastAPI and GraphQL"
authors = ["mustafairshaidd <mustafa-irshaid_2001@hotmail.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.1"
python-dotenv = "^1.1.1"
httpx = "^0.27.0"
strawberry-graphql = "^0.278.1"
sqlmodel = "^0.0.14"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
uvicorn = "^0.35.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
flake8 = "^7.0.0"
bandit = "^1.7.0"
safety = "^2.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
